--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Oulabitex imrsiv chat</title>
+<title>chat bot</title>
 </head>
 <body>
     <script>window.$zoho=window.$zoho || {};$zoho.salesiq=$zoho.salesiq||{ready:function(){}}</script><script id="zsiqscript" src="https://salesiq.zohopublic.com/widget?wc=siqc5f2ed120422c92cb4ba36b00282457f7902469a6e5c5aaf7cf19739a69db5c0" defer></script>
